--- a/src/App.module.css
+++ b/src/App.module.css
@@ -102,7 +102,7 @@
     flex-direction: column;
 
     width: 100%;
-    margin-top: 6rem;
+    margin-top: 3.5rem;
 }
 
 .emptyList h4 {
@@ -119,6 +119,16 @@
     font-weight: 400;
     line-height: 1.5rem;
     color: var(--gray-300);
+}
+
+.taskList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    margin-top: 1.5rem;
 }
 
 @media (max-width: 768px) {
