--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -37,12 +37,18 @@
     -webkit-appearance: none;
     outline: none;
     cursor: pointer;
+
+    transition: all 0.2s;
 }
 
 .checkbox:checked {
     background: var(--purple);
     border-color: var(--purple);
     position: relative;
+}
+
+.checkbox:checked:hover {
+    filter: brightness(0.8);
 }
 
 .checkbox:checked::before {
@@ -73,8 +79,11 @@
 .task button {
     background: transparent;
     border: 0;
+
     color: var(--gray-300);
     font-size: 1.5rem;
+    line-height: 0;
+
     transition: filter 0.2s;
 
     cursor: pointer;
