--- a/src/App.module.css
+++ b/src/App.module.css
@@ -84,7 +84,7 @@
     justify-content: center;
     align-items: center;
 
-    width: 1.563rem;
+    padding: 0.5rem;
     height: 1.188rem;
     border-radius: 9px;
 
